<resources>
    <string name="app_name">İngilizce Öğrenme Uygulaması</string>
    <color name="yellow">#eee8aa</color>
    <color name="button">#c60000</color>
    <string name="s_gn_n">sıgn ın</string>
    <string name="s_gn_up">sıgn up</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="reset_it">Reset it</string>
    <string name="reg_ster">Regıster</string>
    <string name="register">Register</string>

    <string name="please_fill_in_all_the_information">Please fill in all the information</string>
    <string name="user_name">User Name</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="play">Test</string>
    <string name="ezber">Kelime Ezber</string>
    <string name="chat">Chat</string>
    <string name="hikaye">Hikayeler</string>
    <string name="profile">Profile</string>
    <string name="ranking">Ranking</string>

    <string name="change">Change</string>
    <string name="score">Score</string>
    <string name="_0">0</string>
    <string name="_1_30">1 / 30</string>
    <string name="answer_a">Answer A</string>
    <string name="answer_d">Answer D</string>
    <string name="answer_b">Answer B</string>
    <string name="answer_c">Answer C</string>
    <string name="play_again">PLAY AGAIN</string>
    <string name="passed_1_30">Passed : 1 / 30</string>
    <string name="score_0">Score : 0</string>
    <string name="english_word">English Word</string>
    <string name="power">Memorization</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>

</resources>
