<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".OyunbaslaFragment">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        app:srcCompat="@drawable/logo"
        tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/btnPlay"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/button"
        android:text="@string/play"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_below="@+id/textView7"
        android:layout_centerHorizontal="true" />
    <Button
        android:id="@+id/btnEzberle"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/button"
        android:text="@string/ezber"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_below="@+id/btnPlay"
        android:layout_centerHorizontal="true" />
    <Button
    android:id="@+id/btnChat"
    android:layout_width="180dp"
    android:layout_height="40dp"
    android:layout_marginTop="15dp"
    android:background="@drawable/button"
    android:text="@string/chat"
    android:textAlignment="center"
    android:textColor="@android:color/white"
    android:textSize="18sp"
    android:textStyle="bold"
    android:layout_below="@+id/btnEzberle"
    android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/btnHikayeler"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_below="@+id/btnChat"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@drawable/button"
        android:text="Çevir Ezberle"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_below="@+id/imageView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/english_word"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:text="@string/power"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_below="@+id/textView6"
        android:layout_centerHorizontal="true" />


</RelativeLayout>