<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context="com.hayriyec.yazilimtasarim.kaydol">

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:layout_below="@+id/linearLayout2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:background="@drawable/button"
        android:fontFamily="Montserrat"
        android:lineSpacingExtra="10sp"
        android:text="@string/reg_ster"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="monospace" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="37dp"
        app:srcCompat="@drawable/profile"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription=""
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:text="@string/register"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="@android:color/white"

        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:text="@string/please_fill_in_all_the_information"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="17sp" />
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:layout_marginTop="27dp"
        android:id="@+id/linearLayout2">

        <EditText
            android:id="@+id/edtNewUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/cizgi"
            android:hint="@string/user_name"
            android:inputType="text"
            android:maxLength="10"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textStyle="bold"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edtNewEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/cizgi"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textStyle="bold"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edtNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/cizgi"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLength="10"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textStyle="bold"
            android:textSize="20sp" />
    </LinearLayout>
</RelativeLayout>

