<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    tools:context="com.hayriyec.yazilimtasarim.MainActivity">

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp"
        android:background="@drawable/button"
        android:text="@string/s_gn_n"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:background="@drawable/button"
        android:fontFamily="Montserrat"
        android:text="@string/s_gn_up"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="monospace"
        android:layout_below="@+id/imageView3"
        android:layout_alignStart="@+id/btnSignIn"
        android:layout_marginTop="25dp"
        android:layout_alignLeft="@+id/btnSignIn" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="10dp"
        app:srcCompat="@drawable/logo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout"
        android:layout_below="@+id/imageView2"
        android:layout_alignParentStart="true">

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/cizgi"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            android:textAlignment="center"
            android:textColor="@android:color/holo_red_dark"
            android:textColorHint="@android:color/holo_red_dark"
            android:textStyle="bold"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/cizgi"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLength="10"
            android:textAlignment="center"
            android:textColor="@android:color/holo_red_dark"
            android:textColorHint="@android:color/holo_red_dark"
            android:textStyle="bold"
            android:textSize="20sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnSignIn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="Don't remember your password? "
        android:textAlignment="textStart"
        android:textColor="@android:color/holo_red_dark"
        android:textStyle="bold"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txtResetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView3"
        android:layout_toEndOf="@+id/textView3"
        android:text="@string/reset_it"
        android:textColor="#2FD5F8"
        android:textSize="16sp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/textView3"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"/>

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="match_parent"
        android:layout_height="9dp"
        android:layout_alignBottom="@+id/imageView3"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="10dp" />


</RelativeLayout>

