<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient"
        tools:context="com.hayriyec.yazilimtasarim.test">

    <ImageView
        android:id="@+id/imgPlayQuestion"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="54dp"
        android:gravity="center"
        tools:ignore="ContentDescription" />


    <RelativeLayout
        android:layout_alignParentBottom="true"
        android:layout_margin="30dp"
        android:paddingTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/relativeLayout">

        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/group"
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent">

            <LinearLayout
                android:weightSum="2"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txtPlayScore"
                    android:layout_width="157dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/_0"
                    android:textAlignment="viewStart"
                    android:textColor="@android:color/white"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtPlayTotalQuestion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/_1_30"
                    android:textAlignment="viewEnd"
                    android:textColor="@android:color/white"
                    android:textSize="25sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <ProgressBar
                android:id="@+id/progressBar"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:max="10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btnAnswerA"
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:layout_margin="8dp"
                android:background="@drawable/button"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="Answer A"
                android:textColor="@android:color/white"
                android:textSize="17sp"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />

            <Button
                android:id="@+id/btnAnswerB"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_margin="8dp"
                android:background="@drawable/button"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="@string/answer_b"
                android:textColor="@android:color/white"
                android:textSize="17sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnAnswerC"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_margin="8dp"
                android:background="@drawable/button"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="@string/answer_c"
                android:textColor="@android:color/white"
                android:textSize="17sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnAnswerD"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_margin="8dp"
                android:background="@drawable/button"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="@string/answer_d"
                android:textColor="@android:color/white"
                android:textSize="17sp"
                android:textStyle="bold" />

        </LinearLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/txtPlayQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/relativeLayout"
        android:layout_alignEnd="@+id/imgPlayQuestion"
        android:layout_alignStart="@+id/relativeLayout"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="35sp"
        android:textStyle="bold"
        android:visibility="invisible" />

    <ImageButton
        android:id="@+id/imgBtnTextToSpeech"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_above="@+id/relativeLayout"
        android:layout_toEndOf="@+id/imgPlayQuestion"
        android:background="@null"
        android:elevation="0dp"
        android:scaleType="fitXY"
        android:visibility="invisible"
        app:srcCompat="@drawable/audio"
        tools:ignore="ContentDescription" />

</RelativeLayout>

