<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context="com.hayriyec.yazilimtasarim.tekrar_oyna">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:contentDescription=""
        app:srcCompat="@drawable/logo"
        tools:ignore="ContentDescription" />

    <RelativeLayout
        android:layout_centerInParent="true"
        android:layout_margin="30dp"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:id="@+id/btnGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="100dp"
            android:orientation="vertical"
            android:padding="10dp"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/txtTotalScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/score_0"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtTotalQuestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/passed_1_30"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

            <ProgressBar
                android:id="@+id/doneProgressBar"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="254dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="5dp" />

            <Button
                android:id="@+id/btnTryAgain"
                android:layout_width="160dp"
                android:layout_height="40dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/button"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="@string/play_again"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>

