<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".ProfilFragment">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="41dp"
        app:srcCompat="@drawable/logo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription=""
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout"
        android:layout_below="@+id/imageView2"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/txtProfileUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/cizgi"
            android:text="@string/user_name"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="21sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtProfileScore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/cizgi"
            android:text="@string/score"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="21sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtProfileRanking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/cizgi"
            android:text="@string/ranking"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="21sp"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/btnProfileLogOut"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:background="@drawable/button"
        android:text="LOG OUT"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textStyle="bold" />


</RelativeLayout>
